Fix #646 , profile redirecting issue and Css Alignment

--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -1,13 +1,13 @@
 .App {
   text-align: center;
-  background-color: #CAE7FE;
+  background-color: #cae7fe;
 }
-.scroll{
+.scroll {
   z-index: 10000;
-   padding: 1rem 1rem!important;
+  padding: 1rem 1rem !important;
   align-items: center !important;
   justify-items: center !important;
-  right:20px !important;
+  right: 20px !important;
   margin-top: -2rem;
   position: absolute;
   box-shadow: 0 0 4px grey !important;
@@ -20,7 +20,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px 0px;
-  width:100%;
+  width: 100%;
   color: white;
   margin: 0px;
   background-color: white;
@@ -28,11 +28,11 @@
   z-index: 10;
   max-height: 60px;
   /* border-radius: 5px; */
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   transition: all 0.6s;
   /* box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.421); */
 }
-.navbar.fixed{
+.navbar.fixed {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -40,9 +40,8 @@
   color: white;
   /* background-color:transparent; */
   width: 100%;
-  margin:0;
-  box-shadow:  0 2px 2px rgba(0, 0, 0, 0.385);
-  
+  margin: 0;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.385);
 }
 .navbar.fixed .menu ul {
   list-style: none;
@@ -57,7 +56,6 @@
   /* box-shadow: 0 2px 2px rgba(0, 0, 0, 0.385); */
   /* border-bottom-left-radius: 50px; */
 }
-
 
 .logo img {
   width: 75px;
@@ -80,7 +78,7 @@
   padding: 0;
   display: flex;
   gap: 60px;
-  margin:0px;
+  margin: 0px;
   float: right;
   padding: 0px 30px;
   align-items: center;
@@ -91,7 +89,7 @@
 
 .menu li {
   margin: 15px 0;
-  :hover{
+  :hover {
     text-decoration: underline;
   }
 }
@@ -99,7 +97,7 @@
 .profile_btn {
   background-color: var(--btnColor);
   border-radius: 10px;
-  color: #F4F6FC;
+  color: #f4f6fc;
   text-align: center;
   padding: 10px 40px;
   margin-right: 0.5vw;
@@ -109,22 +107,22 @@
   font-weight: 400;
   cursor: pointer;
   box-shadow: 1px 2px 1px grey;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-.profile_btn:hover{
-  background-color: #050A30;
+.profile_btn:hover {
+  background-color: #050a30;
 }
 
 .menu a {
   text-decoration: none;
   color: #00073e;
   font-size: 22px;
-  :active{
-    color:#303B5E;
+  :active {
+    color: #303b5e;
   }
 }
-.menu a button{
-  :hover{
+.menu a button {
+  :hover {
     background-color: #152280;
   }
 }
@@ -171,7 +169,11 @@
 
 .college:hover,
 .college.active {
-  background: linear-gradient(to right, rgba(0, 128, 255, 0.5), rgba(19, 191, 200, 0.5));
+  background: linear-gradient(
+    to right,
+    rgba(0, 128, 255, 0.5),
+    rgba(19, 191, 200, 0.5)
+  );
 }
 
 .college-content {
@@ -208,31 +210,29 @@
 .dot {
   height: 18px;
   width: 18px;
-  background-color:#050A30;
+  background-color: #050a30;
   border-radius: 50%;
-  
 }
-
 
 @media (max-width: 960px) {
   .menu {
     display: none;
   }
-  .colleges{
-    display:flex;
-    justify-content:left;
-    margin-left:0px;
-  }
-  .college{
-    display:flex;
-    flex-direction:column;
+  .colleges {
+    display: flex;
     justify-content: left;
-    margin-left:0px;
-    padding-right:90px;
+    margin-left: 0px;
   }
-  .up{
-    padding-right:120px;
-    margin-left:0px;
+  .college {
+    display: flex;
+    flex-direction: column;
+    justify-content: left;
+    margin-left: 0px;
+    padding-right: 90px;
+  }
+  .up {
+    padding-right: 120px;
+    margin-left: 0px;
   }
   .menu.show {
     display: block;
@@ -255,11 +255,13 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 95%;
-    background-color: #CAE7FE;
+    background-color: #cae7fe;
   }
 
   .menu.show {
     display: flex;
+    position: absolute;
+    top: 260px;
     background: #cae7fe45;
     border-radius: 10px;
     padding: 75px;
@@ -301,26 +303,26 @@
 }
 
 .maintxt {
-  background-color: #CAE7FE;
+  background-color: #cae7fe;
 }
 
 .maintxt h1 {
   width: 66vw;
-  font-family: 'ABeeZee';
+  font-family: "ABeeZee";
   font-size: 70px;
-  color: #050A30;
+  color: #050a30;
   margin: 0 auto;
   padding-top: 180px;
 }
 
 .blue {
-  color: #3C38B9;
+  color: #3c38b9;
 }
 
 .maintxt p {
-  font-family: 'ABeeZee';
+  font-family: "ABeeZee";
   font-size: 22px;
-  color: #050A30;
+  color: #050a30;
   text-align: center;
   margin: 30px 0 0 0;
   padding-bottom: 50px;
@@ -362,7 +364,7 @@
   border: none;
   border-radius: 15px;
   font-size: 25px;
-  font-family: 'ABeeZee';
+  font-family: "ABeeZee";
   color: #25376e;
   padding-left: 35px;
   margin-left: 40px;
@@ -376,7 +378,7 @@
 .search button {
   background-color: var(--btnColor);
   border-radius: 15px;
-  color: #F4F6FC;
+  color: #f4f6fc;
   text-align: center;
   padding: 20px 50px 20px 50px;
   margin-right: 0.5vw;
@@ -387,7 +389,7 @@
 }
 
 .search button:hover {
-  background-color: #000000
+  background-color: #000000;
 }
 
 .s_bar_c {
@@ -395,21 +397,21 @@
 }
 .navigator {
   font-size: 40px;
-  font-family: 'ABeeZee';
+  font-family: "ABeeZee";
   font-weight: 600;
   width: 80vw;
   margin: auto;
-  background-color: #CAE8FF;
+  background-color: #cae8ff;
 }
 
 .nearby {
   float: left;
-  color: #050A30;
+  color: #050a30;
 }
 
 .seeall {
   float: right;
-  color: #303B5E;
+  color: #303b5e;
 }
 
 .colleges {
@@ -426,11 +428,11 @@
 }
 
 .college {
-  font-family: 'ABeeZee';
+  font-family: "ABeeZee";
   width: 300px;
   height: 170px;
   border-radius: 12px;
-  background-color: #5CB6F9;
+  background-color: #5cb6f9;
   padding: 30px;
   margin: auto;
 }
@@ -448,20 +450,20 @@
 
 .context p {
   font-size: 20px;
-  font-family: 'ABeeZee';
+  font-family: "ABeeZee";
   margin-bottom: 20px;
 }
 
 .context span {
   font-size: 14px;
-  background-color: #F4F6FC;
+  background-color: #f4f6fc;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 30px;
   padding-right: 30px;
   border-radius: 20px;
-  color: #3E3ABA;
-  font-family: 'ABeeZee';
+  color: #3e3aba;
+  font-family: "ABeeZee";
 }
 
 .down {
@@ -471,14 +473,14 @@
 }
 
 .ctc {
-  font-family: 'ABeeZee';
+  font-family: "ABeeZee";
   font-size: 18px;
-  color: #050A30;
+  color: #050a30;
 }
 
 .time {
   font-size: 15px;
-  font-family: 'ABeeZee';
+  font-family: "ABeeZee";
   color: #050a3079;
 }
 
@@ -491,7 +493,7 @@
   z-index: 100;
 }
 
-.toast-message:first-child{
+.toast-message:first-child {
   margin-top: 90px;
 }
 
@@ -499,35 +501,34 @@
   .menu {
     display: none;
   }
-  .colleges{
-    display:flex;
-    justify-content:center;
-    margin-left:0px;
-    padding-right:20px;
-    
+  .colleges {
+    display: flex;
+    justify-content: center;
+    margin-left: 0px;
+    padding-right: 20px;
   }
-  .college{
-    display:flex;
-    flex-direction:column;
+  .college {
+    display: flex;
+    flex-direction: column;
     justify-content: left;
-    margin-left:0px;
+    margin-left: 0px;
     padding: 40px;
-    width:65vw;
+    width: 65vw;
   }
-  .college-content{
-    margin-right:10px;
-    padding-right:30px;
+  .college-content {
+    margin-right: 10px;
+    padding-right: 30px;
   }
-  .up{
-    padding-right:120px;
-    margin-left:0px;
+  .up {
+    padding-right: 120px;
+    margin-left: 0px;
   }
-  .context{
-    padding-right:20px;
-    margin-right:10px;
+  .context {
+    padding-right: 20px;
+    margin-right: 10px;
   }
-  .college_name{
-    padding-right:20px;
+  .college_name {
+    padding-right: 20px;
   }
   .menu.show {
     display: block;
@@ -550,7 +551,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 95%;
-    background-color: #CAE7FE;
+    background-color: #cae7fe;
   }
 
   .menu.show {
@@ -613,11 +614,6 @@
   }
 }
 
-
-
-
-  
-
 @media (max-width: 1050px) {
   .s_bar_c {
     display: flex;
@@ -661,8 +657,6 @@
     margin: auto;
   }
 }
-
-
 
 @media (max-width: 960px) {
   .colleges {
